
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src )
LINK_LIBRARIES(${PROJECT_NAME})
IF(OPENCV_VERSION_3)
ADD_EXECUTABLE(demo_general demo_general.cpp)
ADD_EXECUTABLE(create_voc_step0 create_voc_step0.cpp)
ADD_EXECUTABLE(create_voc_step1 create_voc_step1.cpp)
ADD_EXECUTABLE(demo_match demo_match.cpp)
ADD_EXECUTABLE(converter converter.cpp)
INSTALL(TARGETS  demo_general  create_voc_step0  create_voc_step1 demo_match converter RUNTIME DESTINATION bin)
ENDIF()
